--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.4.1",
+    "husky": "^7.0.4"
   }
 }
