--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "sudo nodemon ./bin/www",
     "lint": "node_modules/.bin/eslint app.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
