--- a/package.json
+++ b/package.json
@@ -1,34 +1,107 @@
 {
-  "name": "test-server1",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
+  
+    "name": "test-server1",
+  
+    "version": "0.0.0",
+  
+    "private": true,
+  
+    "scripts": {
+  
+      
     "start": "nodemon ./bin/www",
+  
+      
     "lint": "node_modules/.bin/eslint app.js",
+  
+      
     "predeploy": "npm run build",
+  
+      
     "deploy": "gh-pages -d build"
-  },
-  "husky": {
+  
+    },
+  
+    "husky": {
+  
+      
     "hooks": {
-      "pre-commit": "npm run lint"
+  
+      
+      
+    "pre-commit": "npm run lint"
+  
+      
     }
-  },
-  "homepages": "https://github.com/geni88/test-server1.git",
-  "dependencies": {
+  
+    },
+  
+    "homepages": "https://github.com/geni88/test-server1.git",
+  
+    "dependencies": {
+  
+      
+    "axios": "^1.8.4",
+  
+      
     "cookie-parser": "~1.4.4",
+  
+      
     "cors": "^2.8.5",
+  
+      
     "crypto": "^1.0.1",
+  
+      
     "debug": "~2.6.9",
+  
+      
     "dotenv": "^10.0.0",
+  
+      
     "express": "~4.16.1",
+  
+      
     "http-errors": "~1.6.3",
+  
+      
     "jade": "~1.11.0",
+  
+      
     "jsonwebtoken": "^8.5.1",
+  
+      
     "morgan": "~1.9.1",
-    "mysql2": "^2.3.2"
-  },
-  "devDependencies": {
+  
+      
+    "mysql2": "^2.3.3",
+  
+      
+    "nodemon": "^3.1.9",
+  
+      
+    "openai": "^4.73.1",
+  
+      
+    "path": "^0.12.7",
+  
+      
+    "pg": "^8.14.1",
+  
+      
+    "xlsx": "^0.18.5"
+  
+    },
+  
+    "devDependencies": {
+  
+      
     "eslint": "^8.4.1",
+  
+      
     "husky": "^7.0.4"
-  }
+  
+    },
+  
+    "type": "commonjs"
 }
